--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/public-sans": "^4.5.11",
     "@mui/icons-material": "^5.10.16",
-  
     "@mui/material": "^5.10.16",
+    "@mui/system": "^5.11.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
